# adventofcode

./: .gitignore  README.md  pyproject.toml
2020/code/: day1.py  day2.py
2021/code/: day11.py  day14.py  day15.py  day16.py  day17.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
code/: day10.py  day11.py  day12.py  day13.py  day14.py  day17.py  day3.py  day5.py  day5samplesolution.py  day6.py  day7.py  day8.py  day9.py
data/: day5_.py
