[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["cptnemo2005 <kytringuyen95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
